Fix z-index of tab-bar

--- a/sass/project.scss
+++ b/sass/project.scss
@@ -5,7 +5,7 @@
 
   &.affix {
     width: 100%;
-    z-index: 11;
+    z-index: 50;
     top: 45px;
     position: fixed;
   }
